# opencv-experiment

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Source/: CMakeLists.txt
Source/Application/: CMakeLists.txt
Source/Application/Modules/Private/: Main.cpp
